# corella-docker-cpp-googletest

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_start_image.sh  build_docker.sh  build_docker_image.sh  run_tests.sh
include/: Calculator.h
src/: Calculator.cpp  main.cpp
src/main/c/: example.c  example.h  main.c  strings.c  strings.h
src/test/c/: test_example.c  test_main.c  test_strings.c
src/test/c/unity/: unity.c  unity.h
tests/: CMakeLists.txt  test_calculator.cpp
